Start Second page

--- a/GodFather.html
+++ b/GodFather.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GodFather</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div id="header">
+        <img src="Image/Morteza Hossainzade.JPG" alt="" />
+        <div>
+          <p
+            style="
+              color: black;
+              font-size: 40px;
+              font-family: Arial, Helvetica, sans-serif;
+              font-weight: bold;
+            "
+          >
+            Morteza Hossainzade
+          </p>
+        </div>
+      </div>
+    </header>
     <main>
-<div class="GodFather">
-    <img src="Image/GOD FATHER.PNG" alt="">
-</div>
+      <div class="GodFather">
+        <img src="Image/GOD FATHER.PNG" alt="Click To Start" />
+        <a
+          style="
+            color: black;
+            background-color: white;
+            text-decoration: none;
+            padding: 15px;
+            border-radius: 20px;
+            width: 200px;
+            margin-left: 42%;
+            padding-left: 65px;
+          "
+          href="SecondPage.html"
+          >Start Game</a
+        >
+      </div>
     </main>
-</body>
+    <script src="./jq.js"></script>
+  </body>
 </html>
