--- a/GodFather.html
+++ b/GodFather.html
@@ -37,10 +37,11 @@
             width: 200px;
             margin-left: 42%;
             padding-left: 65px;
+            box-shadow: 0px 0px 10px black;
           "
-          href="SecondPage.html"
-          >Start Game</a
-        >
+          href="SecondPage.html">
+          Start Game
+        </a>
       </div>
     </main>
     <script src="./jq.js"></script>
