--- a/SecondPage.html
+++ b/SecondPage.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GodFather</title>
+    <link rel="stylesheet" href="style2.css" />
+  </head>
+  <body>
+    <div id="mdiv">
+      <div id="div">
+        <div id="card"><img src="Image/GOD FATHER.PNG" alt="" /></div>
+        <div id="card"><img src="Image/MATADOR.PNG" alt="" /></div>
+        <div id="card"><img src="Image/SAUL GOODMAN.PNG" alt="" /></div>
+        <div id="card"><img src="Image/CONSTANTINE.PNG" alt="" /></div>
+        <div id="card"><img src="Image/DOCTOR WATSON.PNG" alt="" /></div>
+        <div id="card"><img src="Image/LEON.PNG" alt="" /></div>
+        <div id="card"><img src="Image/NOSTRADAMUS.PNG" alt="" /></div>
+        <div id="card"><img src="Image/CITIZEN KANE.PNG" alt="" /></div>
+        <div style="background-color: #0e0e0e" id="card">
+          <img src="Image/THE CITIZEN.PNG" alt="" />
+        </div>
+        <div style="background-color: #0e0e0e" id="card">
+          <img src="Image/THE CITIZEN.PNG" alt="" />
+        </div>
+        <div style="background-color: #0e0e0e" id="card">
+          <img src="Image/THE CITIZEN.PNG" alt="" />
+        </div>
+        <div
+          style="
+            background-color: white;
+            width: 150px;
+            height: 40px;
+            padding: 10px;
+            padding-left: 40px;
+            border-radius: 10px;
+            margin-top: 130px;
+            margin-left: 30px;
+            box-shadow: 0px 0px 10px black;
+          "
+        >
+          <a style="text-decoration: none; color: black" href="thirdpage.html">Next Page</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
