Add Array list in card

--- a/SecondPage.html
+++ b/SecondPage.html
@@ -5,28 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GodFather</title>
     <link rel="stylesheet" href="style2.css" />
+    <link rel="shortcut icon" type="x-icon" href="Image/GOD FATHER.PNG" />
   </head>
   <body>
     <div id="mdiv">
       <div id="div">
-        <div id="card"><img src="Image/GOD FATHER.PNG" alt="" /></div>
-        <div id="card"><img src="Image/MATADOR.PNG" alt="" /></div>
-        <div id="card"><img src="Image/SAUL GOODMAN.PNG" alt="" /></div>
-        <div id="card"><img src="Image/CONSTANTINE.PNG" alt="" /></div>
-        <div id="card"><img src="Image/DOCTOR WATSON.PNG" alt="" /></div>
-        <div id="card"><img src="Image/LEON.PNG" alt="" /></div>
-        <div id="card"><img src="Image/NOSTRADAMUS.PNG" alt="" /></div>
-        <div id="card"><img src="Image/CITIZEN KANE.PNG" alt="" /></div>
-        <div style="background-color: #0e0e0e" id="card">
-          <img src="Image/THE CITIZEN.PNG" alt="" />
+        <div class="card">
+          <img id="GodFather" src="Image/GOD FATHER.PNG" alt="" />
         </div>
-        <div style="background-color: #0e0e0e" id="card">
-          <img src="Image/THE CITIZEN.PNG" alt="" />
+        <div class="card">
+          <img id="MATADOR" src="Image/MATADOR.PNG" alt="" />
         </div>
-        <div style="background-color: #0e0e0e" id="card">
-          <img src="Image/THE CITIZEN.PNG" alt="" />
+        <div class="card">
+          <img id="Saulgoodman" src="Image/SAUL GOODMAN.PNG" alt="" />
+        </div>
+        <div class="card">
+          <img id="CONSTANTINE" src="Image/CONSTANTINE.PNG" alt="" />
+        </div>
+        <div class="card">
+          <img id="DOCTOR" src="Image/DOCTOR WATSON.PNG" alt="" />
+        </div>
+        <div class="card"><img id="LEON" src="Image/LEON.PNG" alt="" /></div>
+        <div class="card">
+          <img id="NOSTRADAMUS" src="Image/NOSTRADAMUS.PNG" alt="" />
+        </div>
+        <div class="card">
+          <img id="KANE" src="Image/CITIZEN KANE.PNG" alt="" />
+        </div>
+        <div class="card">
+          <img id="CITIZEN" src="Image/THE CITIZEN.PNG" alt="" />
+        </div>
+        <div class="card">
+          <img id="CITIZEN" src="Image/THE CITIZEN.PNG" alt="" />
+        </div>
+        <div class="card">
+          <img id="CITIZEN" src="Image/THE CITIZEN.PNG" alt="" />
         </div>
         <div
+          class="start_btn"
           style="
             background-color: white;
             width: 150px;
@@ -39,9 +55,10 @@
             box-shadow: 0px 0px 10px black;
           "
         >
-          <a style="text-decoration: none; color: black" href="thirdpage.html">Next Page</a>
+          <button style="text-decoration: none; color: black">Next Page</button>
         </div>
       </div>
     </div>
+    <script src="js.js"></script>
   </body>
 </html>
