--- a/thirdpage.html
+++ b/thirdpage.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GodFather</title>
+    <link rel="stylesheet" href="style3.css">
+    <link rel="shortcut icon" type="x-icon" href="Image/GOD FATHER.PNG">
 </head>
 <body>
     
