--- a/GodFather.html
+++ b/GodFather.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GodFather</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="x-icon" href="Image/GOD FATHER.PNG">
   </head>
   <body>
     <header>
@@ -13,7 +14,7 @@
         <div>
           <p
             style="
-              color: black;
+              color: white;
               font-size: 40px;
               font-family: Arial, Helvetica, sans-serif;
               font-weight: bold;
@@ -37,7 +38,7 @@
             width: 200px;
             margin-left: 42%;
             padding-left: 65px;
-            box-shadow: 0px 0px 10px black;
+            box-shadow: 0px 0px 10px white;
           "
           href="SecondPage.html">
           Start Game
