--- a/SecondPage.html
+++ b/SecondPage.html
@@ -55,7 +55,19 @@
             box-shadow: 0px 0px 10px black;
           "
         >
-          <button style="text-decoration: none; color: black">Next Page</button>
+          <button id="myButton"
+            type="submit"
+            value="submit"
+            style="
+              text-decoration: none;
+              color: black;
+              background-color: white;
+              border: none;
+              font-size: 18px;
+            "
+          >
+            Next Page
+          </button>
         </div>
       </div>
     </div>
