--- a/thirdpage.html
+++ b/thirdpage.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GodFather</title>
-    <link rel="stylesheet" href="style3.css">
-    <link rel="shortcut icon" type="x-icon" href="Image/GOD FATHER.PNG">
-</head>
-<body>
-    
-</body>
+    <link rel="shortcut icon" type="x-icon" href="Image/GOD FATHER.PNG" />
+    <link rel="stylesheet" href="style3.css" />
+  </head>
+  <body>
+    <h1></h1>
+    <ul id="highlightedRoles"></ul>
+    <script src="js3.js"></script>
+  </body>
 </html>
