--- a/thirdpage.html
+++ b/thirdpage.html
@@ -10,6 +10,22 @@
   <body>
     <h1></h1>
     <ul id="highlightedRoles"></ul>
+    <div class="maincontainer">
+      <div class="thecard">
+        <div class="thefront"></div>
+        <div class="thefront"></div>
+        <div class="thefront"></div>
+        <div class="thefront"></div>
+        <div class="thefront"></div>
+        <div class="thefront"></div>
+        <div class="thefront"></div>
+        <div class="thefront"></div>
+        <div class="thefront"></div>
+        <div class="thefront"></div>
+        <div class="thefront"></div>
+        <div class="theback">Back of the card</div>
+      </div>
+    </div>
     <script src="js3.js"></script>
   </body>
 </html>
