add card in thirdd page

--- a/SecondPage.html
+++ b/SecondPage.html
@@ -11,13 +11,13 @@
     <div id="mdiv">
       <div id="div">
         <div class="card">
-          <img id="GodFather" src="Image/GOD FATHER.PNG" alt="" />
+          <img id="GodFather" src="Image/GODFATHER.PNG" alt="" />
         </div>
         <div class="card">
           <img id="MATADOR" src="Image/MATADOR.PNG" alt="" />
         </div>
         <div class="card">
-          <img id="Saulgoodman" src="Image/SAUL GOODMAN.PNG" alt="" />
+          <img id="Saulgoodman" src="Image/Saulgoodman.PNG" alt="" />
         </div>
         <div class="card">
           <img id="NOSTRADAMUS" src="Image/NOSTRADAMUS.PNG" alt="" />
@@ -26,21 +26,21 @@
           <img id="CONSTANTINE" src="Image/CONSTANTINE.PNG" alt="" />
         </div>
         <div class="card">
-          <img id="DOCTOR" src="Image/DOCTOR WATSON.PNG" alt="" />
+          <img id="DOCTOR_WATSON" src="Image/DOCTOR_WATSON.PNG" alt="" />
         </div>
         <div class="card"><img id="LEON" src="Image/LEON.PNG" alt="" /></div>
-      
+
         <div class="card">
-          <img id="KANE" src="Image/CITIZEN KANE.PNG" alt="" />
+          <img id="KANE" src="Image/KANE.PNG" alt="" />
         </div>
         <div class="card">
-          <img id="CITIZEN" src="Image/THE CITIZEN.PNG" alt="" />
+          <img id="CITIZEN" src="Image/CITIZEN.PNG" alt="" />
         </div>
         <div class="card">
-          <img id="CITIZEN" src="Image/THE CITIZEN.PNG" alt="" />
+          <img id="CITIZEN" src="Image/CITIZEN.PNG" alt="" />
         </div>
         <div class="card">
-          <img id="CITIZEN" src="Image/THE CITIZEN.PNG" alt="" />
+          <img id="CITIZEN" src="Image/CITIZEN.PNG" alt="" />
         </div>
         <div
           class="start_btn"
@@ -56,7 +56,8 @@
             box-shadow: 0px 0px 10px black;
           "
         >
-          <button id="myButton"
+          <button
+            id="myButton"
             type="submit"
             value="submit"
             style="
