--- a/thirdpage.html
+++ b/thirdpage.html
@@ -10,22 +10,16 @@
   <body>
     <h1></h1>
     <ul id="highlightedRoles"></ul>
-    <div class="maincontainer">
-      <div class="thecard">
-        <div class="thefront"></div>
-        <div class="thefront"></div>
-        <div class="thefront"></div>
-        <div class="thefront"></div>
-        <div class="thefront"></div>
-        <div class="thefront"></div>
-        <div class="thefront"></div>
-        <div class="thefront"></div>
-        <div class="thefront"></div>
-        <div class="thefront"></div>
-        <div class="thefront"></div>
-        <div class="theback">Back of the card</div>
+    <header>
+      <div class="maincontainer">
+        <div class="card_container">
+          <!-- <div class="card">
+            <img src="Image/GODFATHER.PNG" alt="" />
+          </div>
+          <div id="input"><input type="text" placeholder="Enter your Name" /></div> -->
+        </div>
       </div>
-    </div>
+    </header>
     <script src="js3.js"></script>
   </body>
 </html>
