--- a/GodFather.html
+++ b/GodFather.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GodFather</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" type="x-icon" href="Image/GOD FATHER.PNG">
+    <link rel="shortcut icon" type="x-icon" href="Image/GODFATHER.PNG" />
   </head>
   <body>
     <header>
@@ -27,7 +27,7 @@
     </header>
     <main>
       <div class="GodFather">
-        <img src="Image/GOD FATHER.PNG" alt="Click To Start" />
+        <img src="Image/GODFATHER.PNG" alt="Click To Start" />
         <a
           style="
             color: black;
@@ -40,7 +40,8 @@
             padding-left: 65px;
             box-shadow: 0px 0px 10px white;
           "
-          href="SecondPage.html">
+          href="SecondPage.html"
+        >
           Start Game
         </a>
       </div>
