--- a/thirdpage.html
+++ b/thirdpage.html
@@ -13,13 +13,16 @@
     <header>
       <div class="maincontainer">
         <div class="card_container">
-          <!-- <div class="card">
+          <div class="card">
+            <img src="Image/card.png" alt="" />
+          </div>
+          <div class="backcard">
             <img src="Image/GODFATHER.PNG" alt="" />
           </div>
-          <div id="input"><input type="text" placeholder="Enter your Name" /></div> -->
         </div>
       </div>
+      <div class="in"><input type="text" placeholder="Enter Your Name" /></div>
     </header>
-    <script src="js3.js"></script>
+    <!-- <script src="js3.js"></script> -->
   </body>
 </html>
