add click on card

--- a/thirdpage.html
+++ b/thirdpage.html
@@ -10,19 +10,8 @@
   <body>
     <h1></h1>
     <ul id="highlightedRoles"></ul>
-    <header>
-      <div class="maincontainer">
-        <div class="card_container">
-          <div class="card">
-            <img src="Image/card.png" alt="" />
-          </div>
-          <div class="backcard">
-            <img src="Image/GODFATHER.PNG" alt="" />
-          </div>
-        </div>
-      </div>
-      <div class="in"><input type="text" placeholder="Enter Your Name" /></div>
-    </header>
-    <!-- <script src="js3.js"></script> -->
+
+    <div id="content"></div>
+    <script src="js3.js"></script>
   </body>
 </html>
