--- a/thirdpage.html
+++ b/thirdpage.html
@@ -12,6 +12,9 @@
     <ul id="highlightedRoles"></ul>
 
     <div id="content"></div>
+    <div class="di">
+      <button class="bu" id="nextButton">Next page</button>
+  </div>
     <script src="js3.js"></script>
   </body>
 </html>
